# peersend

./: .gitignore  README.md
documentation/PeerSend/: Create User.md  Listen Service.md  Login Service.md  Register Device.md  Send File Service.md  User File System.md
documentation/PeerSend/.obsidian/: workspace.json
documentation/designs/: PeerSend High-Level Architecture draw_io.xml  PeerSend Send file overview v0.1.drawio  class diagram.wsd  crates diagram.wsd
landing page/: index.html  package.json  tailwind.config.js  vite.config.js
landing page/css/: styles.css
landing page/css/components/: buttons.css  cards.css
landing page/css/layout/: header.css
landing page/js/: main.js
landing page/src/: App.tsx
landing page/src/components/: Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Logo.tsx  Security.tsx
peersend/: Cargo.toml
peersend/api/: Cargo.toml
peersend/api/src/: main.rs  main1.txt
peersend/api/src/accesses/: file.rs  mod.rs  redis.rs  session.rs
peersend/api/src/errors/: mod.rs  security.rs
peersend/api/src/handlers/: authenticate.rs  device.rs  ip_address.rs  mod.rs  user.rs
peersend/api/src/models/: error.rs  mod.rs  peer_session.rs
peersend/api/user1@ps.com/: devices  email
peersend/api/user1@ps.com/devices/: rogstrix
peersend/crates/cli/: Cargo.toml  command_executor.rs  main.rs  parser.rs
peersend/crates/cli/parsers/: create_user_parser.rs  help_parser.rs  listen_parser.rs  login_parser.rs  mod.rs  register_device_parser.rs  send_file_parser.rs  version_parser.rs
peersend/crates/comms/: Cargo.toml
peersend/crates/comms/src/: api_communicator.rs  fake_communicator.rs  lib.rs  redis_communication.rs  stun_communicator.rs  tcp_communicator.rs  udt_communicator.rs
peersend/crates/comms/src/protocols/: mod.rs  udt_communicator.rs
peersend/crates/comms/src/storage_accesses/: mod.rs  redis_communication.rs
peersend/crates/core/: Cargo.toml  command.rs  main.rs  parser.rs
peersend/crates/core/src/: api.rs  command.rs  create_user.rs  device.rs  lib.rs  protocol.rs  storage.rs  stun.rs  token.rs  user.rs
peersend/crates/core/src/requests/: check_user.rs  create_user.rs  device.rs  login.rs  mod.rs
peersend/crates/mediators/: Cargo.toml
peersend/crates/services/: Cargo.toml
peersend/crates/services/src/: create_user.rs  help.rs  lib.rs  listen.rs  login.rs  register_device.rs  send_file.rs  user.rs  version.rs
peersend/crates/services/src/file/: mod.rs
peersend/crates/services/src/jwt/: mod.rs  token_handler.rs  token_user_info.rs
peersend/tests/: add.rs  services.rs
services/redis/: docker-compose.yml
