[package]
name = "api"
version = "0.1.0"
authors = ["Hakan Akdag <hakanakdag46@gmail.com>"]
edition = "2021"

[dependencies]
core = { path = "../crates/core" }
comms = { path = "../crates/comms" }
services = { path = "../crates/services" }
actix-web = "4"
serde = "1.0.218"

[dependencies.uuid]
version = "1.15.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
