[package]
name = "comms"
version = "0.1.0"
authors = ["Hakan Akdag <hakanakdag46@gmail.com>"]
description = "Network operations"
edition = "2021"

[dependencies]
core = { path = "../core" }
serde = "1.0.218"
serde_json = "1.0.140"
stunclient = "*"
udt = "*"
ureq = "3.0.9"

[dependencies.redis]
version = "*"
