[package]
name = "services"
version = "0.1.0"
authors = ["Hakan Akdag <hakanakdag46@gmail.com>"]
description = "Handles logic"
edition = "2021"

[dependencies]
core = { path = "../core" }
comms = { path = "../comms" }
validify = { version = "*" }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9"
chrono = { version = "*" }
local-ip = "0.1"
mac_address = "1.1.8"
